tests/snapshots/sfc/js/options_api__async_setup_in_options_api.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: output.as_str()
---

const _sfc_main = {
  async setup() {
    const data = await Promise.resolve({ title: 'Hello' })
    return { data }
  }
}

import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

function _sfc_render(_ctx, _cache) {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(_ctx.data.title), 1 /* TEXT */))
}
_sfc_main.render = _sfc_render
export default _sfc_main
