tests/snapshots/sfc/js/options_api__computed_get_set_with_v_model.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: output.as_str()
---
import { vModelText as _vModelText, withDirectives as _withDirectives, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

function _sfc_render(_ctx, _cache) {
  return _withDirectives((_openBlock(), _createElementBlock("input", {
    "onUpdate:modelValue": $event => ((_ctx.fullName) = $event)
  }, null, 8 /* PROPS */, ["onUpdate:modelValue"])), [
    [_vModelText, _ctx.fullName]
  ])
}

const _sfc_main = {
  data() {
    return { firstName: 'Ada', lastName: 'Lovelace' }
  },
  computed: {
    fullName: {
      get() {
        return this.firstName + ' ' + this.lastName
      },
      set(value) {
        const parts = value.split(' ')
        this.firstName = parts[0]
        this.lastName = parts[1]
      }
    }
  }
}

_sfc_main.render = _sfc_render
export default _sfc_main
