tests/snapshots/sfc/js/options_api__computed_object_form.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: output.as_str()
---

const _sfc_main = {
  data() {
    return { first: 'Ada', last: 'Lovelace' }
  },
  computed: {
    fullName() {
      return this.first + ' ' + this.last
    }
  }
}

import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

function _sfc_render(_ctx, _cache) {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(_ctx.fullName), 1 /* TEXT */))
}
_sfc_main.render = _sfc_render
export default _sfc_main
