tests/snapshots/sfc/js/options_api__data_with_multiple_properties.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: output.as_str()
---

const _sfc_main = {
  data() {
    return { firstName: 'Ada', lastName: 'Lovelace', count: 0 }
  }
}

import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString($data.firstName) + " " + _toDisplayString($data.lastName) + " (" + _toDisplayString($data.count) + ")", 1 /* TEXT */))
}
_sfc_main.render = _sfc_render
export default _sfc_main
