tests/snapshots/sfc/js/options_api__dynamic_class_and_style_from_data.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: output.as_str()
---

const _sfc_main = {
  data() {
    return { active: true, color: 'red' }
  }
}

import { normalizeClass as _normalizeClass, normalizeStyle as _normalizeStyle, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

function _sfc_render(_ctx, _cache) {
  return (_openBlock(), _createElementBlock("div", {
    class: _normalizeClass({ active: _ctx.active }),
    style: _normalizeStyle({ color: _ctx.color })
  }, "content", 6 /* CLASS, STYLE */))
}
_sfc_main.render = _sfc_render
export default _sfc_main
