tests/snapshots/sfc/js/options_api__extends_base_component.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: output.as_str()
---

import Base from './Base.vue'

const _sfc_main = {
  extends: Base,
  data() {
    return { extra: true }
  }
}

import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString($data.extra), 1 /* TEXT */))
}
_sfc_main.render = _sfc_render
export default _sfc_main
