tests/snapshots/sfc/js/options_api__inject_array_form.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: output.as_str()
---

const _sfc_main = {
  inject: ['theme', 'locale']
}

import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

function _sfc_render(_ctx, _cache) {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(_ctx.theme) + " " + _toDisplayString(_ctx.locale), 1 /* TEXT */))
}
_sfc_main.render = _sfc_render
export default _sfc_main
